# InferenceHelper_Sample

./: .gitignore  .gitmodules  NOTICE.md  README.md  download_resource.sh
.github/workflows/: ci_android.yml  ci_arm.yml  ci_armv7.yml  ci_ubuntu.yml  ci_windows.yml  test_windows.yml
00_doc/: class_diagram.drawio
01_script/: build_run_ubuntu.sh  build_run_windows.ps1
02_model_script/: .gitignore  create_model.sh  create_model_pytorch_mobilenet_v2.py  create_model_tf_mobilenet_v2.py  setup_env.sh
ViewAndroid/: settings.gradle
ViewAndroid/app/: build.gradle
ViewAndroid/app/src/androidTest/java/com/iwatake/viewandroidinferencehelpersample/: ExampleInstrumentedTest.java
ViewAndroid/app/src/main/: AndroidManifest.xml
ViewAndroid/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ViewAndroid/app/src/main/java/com/iwatake/viewandroidinferencehelpersample/: MainActivity.java
ViewAndroid/app/src/main/res/values/: strings.xml
ViewAndroid/app/src/test/java/com/iwatake/viewandroidinferencehelpersample/: ExampleUnitTest.java
common_helper/: common_helper.cpp  common_helper.h  common_helper_cv.cpp
common_helper/cmakes/: build_setting.cmake
pj_cls_mobilenet_v2/: CMakeLists.txt  Main.cpp  main.cpp
pj_cls_mobilenet_v2/ImageProcessor/: CMakeLists.txt  ClassificationEngine.cpp  ClassificationEngine.h  ImageProcessor.cpp  ImageProcessor.h
pj_cls_mobilenet_v2/image_processor/: CMakeLists.txt  classification_engine.cpp  classification_engine.h  image_processor.cpp  image_processor.h
pj_cls_mobilenet_v2_wo_opencv/: CMakeLists.txt  main.cpp
pj_det_pedestrian-and-vehicle-detector-adas-0001/: CMakeLists.txt  README.md  main.cpp
pj_det_pedestrian-and-vehicle-detector-adas-0001/image_processor/: CMakeLists.txt  detection_engine.cpp  detection_engine.h  detection_engine_person-detection-0202.cpp  extract_prior_box.py  image_processor.cpp  image_processor.h  prior_bbox.cpp  prior_bbox_person-detection-0202.cpp
pj_det_yolox/: README.md  main.cpp
pj_det_yolox/image_processor/: CMakeLists.txt  detection_engine.cpp  detection_engine.h  image_processor.cpp
test_script/: build_run_windows.ps1
